--- a/styles/checkout/_checkout.scss
+++ b/styles/checkout/_checkout.scss
@@ -6,11 +6,21 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    @media (min-width: 1200px) {
+        align-items: flex-start;
+    }
     .checkout-form {
         margin: 0 auto;
+        width: 100%;
+        @media (min-width: 1200px) {
+            width: auto;
+        }
         fieldset {
             margin: 20px auto;
             padding: 20px 10px;
+            @media (min-width: 768px) {
+                padding: 20px 20px;
+            }
             border: 1px solid $border-color;
         }
         legend {
