--- a/styles/checkout/_order-schedule.scss
+++ b/styles/checkout/_order-schedule.scss
@@ -4,6 +4,10 @@
         display: flex;
         justify-content: center;
 
+        .form-control {
+            width: auto;
+        }
+
         input[type=radio] {
             @include checkout-radio();
         }
