--- a/styles/_menu.scss
+++ b/styles/_menu.scss
@@ -101,6 +101,7 @@
         min-height: 300px;
         img {
             max-width: 100%;
+            max-height: 400px;
         }
     }
     .menu-item-modal-description {
