font awesome version bump

--- a/templates/partials/navbar-full.html
+++ b/templates/partials/navbar-full.html
@@ -15,7 +15,7 @@
             </div>
             <div class="navbar-mobile-cart" cart>
                 <button type="button" class="btn show-quick-order">
-                    <i class="fa fa-shopping-cart"></i>
+                    <i class="fa fa-shopping-basket"></i>
                     <span class="badge ng-cloak" ng-show="cart.items.length" ng-bind="cart.items.length"></span>
                 </button>
             </div>
@@ -38,7 +38,7 @@
                     {% include "partials/customer-menu.html" %}
                     <div class="navbar-desktop-cart" cart>
                         <button type="button" class="btn show-quick-order">
-                            <i class="fa fa-shopping-cart"></i>
+                            <i class="fa fa-shopping-basket"></i>
                             <span class="badge ng-cloak" ng-show="cart.items.length" ng-bind="cart.items.length"></span>
                         </button>
                     </div>
