--- a/styles/_menu.scss
+++ b/styles/_menu.scss
@@ -51,6 +51,7 @@
 }
 
 .menu-item {
+    display: flex;
     cursor: pointer;
     flex-basis: 100%;
     margin: 0 0 16px;
@@ -61,6 +62,16 @@
     @media (min-width: 768px) {
         font-size: 18px;
         flex-basis: 50%;
+    }
+    .item-image {
+        width: 100px;
+        height: 100px;
+        border-radius: 2px;
+        margin: 10px 10px 10px -5px;
+        img {
+            max-width: 100%;
+            width: 100%;
+        }
     }
     &:hover {
         border: 1px solid $colorA;
