Address autocomplete (predictions)

--- a/styles/_common.scss
+++ b/styles/_common.scss
@@ -21,6 +21,10 @@ select:not([multiple]) {
     padding-right: 1.5em;
 }
 
+p.error {
+    color: $colorD;
+}
+
 .clearfix {
     *zoom: 1;
     &:before {
