--- a/styles/_menu.scss
+++ b/styles/_menu.scss
@@ -73,6 +73,9 @@
             width: 100%;
         }
     }
+    // .item-content {
+    //     flex: 1;
+    // }
     &:hover {
         border: 1px solid $colorA;
     }
@@ -119,7 +122,7 @@
         text-align: center;
         font-size: 14px;
         margin: 6px 0 6px;
-        font-color: $colorG;
+        color: $colorG;
     }
     .menu-item-modal-price {
         color: $colorA;
@@ -196,6 +199,29 @@
     }
 }
 
+.prediction-list {
+    padding: 0;
+    border: 1px solid #EEE;
+    box-shadow: 0px 1px 1px #eee;
+    .prediction-address {
+        list-style-type: none;
+        display: flex;
+        justify-content: space-between;
+        cursor: pointer;
+        color:$colorD;
+        padding: 5px;
+        .fa-check {
+            color: $colorA;
+        }
+        &:hover {
+            background-color: $colorA;
+            color: #fff;
+            .fa-check {
+                color: #fff;
+            }
+        }
+    }
+}
 .menu-is-closed {
     text-align: center;
     font-weight: 600;
