custom tip input style

--- a/styles/checkout/_order-address.scss
+++ b/styles/checkout/_order-address.scss
@@ -1,4 +1,5 @@
 .checkout-form-delivery,
+.checkout-form-gratitude-custom,
 .checkout-form-contact {
 
     .form-group {
@@ -20,8 +21,6 @@
         }
     }
 }
-
-
 
 .checkout-form-delivery-address,
 .checkout-form-delivery-address-add {
