--- a/styles/_nav-menu.scss
+++ b/styles/_nav-menu.scss
@@ -82,26 +82,27 @@
 }
 
 @media (min-width: 768px) {
-    .navbar-transparent {
-        .customer-nav a {
-            color: white;
-            text-shadow: 1px 1px #333;
+    body.navbar-fixed {
+        .navbar-transparent {
+            .customer-nav a {
+                color: white;
+                text-shadow: 1px 1px #333;
+            }
+            .navbar-pages-root > a {
+                color: white;
+                text-shadow: 1px 1px #333;
+            }
         }
-        .navbar-pages-root > a {
-            color: white;
-            text-shadow: 1px 1px #333;
+
+        &.scrolled .navbar-transparent {
+            .customer-nav a {
+                color: $colorD;
+                text-shadow: none;
+            }
+            .navbar-pages-root > a {
+                color: $colorD;
+                text-shadow: none;
+            }
         }
     }
-
-    body.scrolled .navbar-transparent {
-        .customer-nav a {
-            color: $colorD;
-            text-shadow: none;
-        }
-        .navbar-pages-root > a {
-            color: $colorD;
-            text-shadow: none;
-        }
-    }
-
 }
