--- a/styles/main.scss
+++ b/styles/main.scss
@@ -23,4 +23,6 @@ $border-color: #CCC;
 @import "menu";
 @import "common";
 @import "checkout/checkout";
+@import "blocks/instagram";
 @import "footer";
+@import "editor";
