--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <title>{{ name }}</title>
+    <link href="https://fonts.googleapis.com/css?family=Clicker+Script" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oxygen:400,700" rel="stylesheet">
     {{ head }}
     {{ theme.styles }}
