--- a/styles/main.scss
+++ b/styles/main.scss
@@ -20,6 +20,7 @@ $border-color: #CCC;
 @import "nav-menu";
 @import "quick-order";
 @import "home";
+@import "location-select";
 @import "menu";
 @import "common";
 @import "checkout/checkout";
