--- a/templates/partials/customer-menu.html
+++ b/templates/partials/customer-menu.html
@@ -1,3 +1,4 @@
+{% include "partials/select-location-btn.html" %}
 <ul class="customer-nav">
     {% if customer %}
     <li class="customer-nav-logout">
