--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -1,5 +1,13 @@
 <head>
     <meta charset="utf-8">
+
+    <meta name="application-name" content="Delirio Fresh Co."/>
+    <meta name="msapplication-square70x70logo" content="{{ theme.path }}/img/win-tiles/small.jpg"/>
+    <meta name="msapplication-square150x150logo" content="{{ theme.path }}/img/win-tiles/medium.jpg"/>
+    <meta name="msapplication-wide310x150logo" content="{{ theme.path }}/img/win-tiles/wide.jpg"/>
+    <meta name="msapplication-square310x310logo" content="{{ theme.path }}/img/win-tiles/large.jpg"/>
+    <meta name="msapplication-TileColor" content="#fff"/>
+
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" >
     <meta name="description" content="{{ meta.description }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,6 +19,7 @@
     <title>{{ name }}</title>
     <link href="https://fonts.googleapis.com/css?family=Clicker+Script" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oxygen:400,700" rel="stylesheet">
+
     {{ head }}
     {{ theme.styles }}
 </head>
