--- a/templates/partials/quick-order.html
+++ b/templates/partials/quick-order.html
@@ -7,7 +7,6 @@
         </button>
     </div>
 </div>
-{% include "partials/color-bar.html" %}
 {% raw %}
 <div class="container ng-cloak">
     <div class="cart-empty" ng-hide="cart.items.length">
@@ -52,18 +51,20 @@
         <div class="cart-subtotal">
             Subtotal <strong>{{cart.subtotal | currency}}</strong>
         </div>
-        <div class="cart-address">
-            <p><b>Order Type:</b> {{ cart.type }}</p>
-            <p ng-if="cart.type == 'delivery'">
-                <b>Delivery Address:</b> 
-                {{ cart.address1 }} {{ cart.address2 }}
-                {{ cart.city }} {{ cart.zip }}
-            </p>
-            <a href="#" edit-order-address>Edit</a>
-        </div>
         <div class="cart-actions">
             <a class="btn" href="/checkout">Checkout</a>
         </div>
+    </div>
+
+    <div class="cart-address">
+        <p><b>Location:</b> <a href="#" data-open-location-select>{{ location.name }}</a></p>
+        <p><b>Order Type:</b> {{ cart.type }}</p>
+        <p ng-if="cart.type == 'delivery'">
+            <b>Delivery Address:</b>
+            {{ cart.address1 }} {{ cart.address2 }}
+            {{ cart.city }} {{ cart.zip }}
+        </p>
+        <a href="#" edit-order-address>Edit</a>
     </div>
 </div>
 {% endraw %}
