--- a/styles/_common.scss
+++ b/styles/_common.scss
@@ -49,16 +49,44 @@ p.error {
     padding: 30px 0;
 }
 
+.input-group-addon {
+    border-radius: 0;
+    background: $colorA;
+    color: $colorF;
+    font-weight: 700;
+    font-size: 18px;
+}
+
 .btn {
     padding: 10px 12px;
     border-radius: 0;
+    border: none;
     font-weight: 700;
     background-color: $colorA;
+    border-color: $colorA;
     color: $colorF;
+    cursor: pointer;
     &.focus, &:focus, &:hover {
         background-color: $colorA;
         border-color: $colorA;
         color: $colorF;
+    }
+    &.btn-success {
+        background-color: $colorD;
+        border-color: $colorD;
+        &.focus, &:focus, &:hover {
+            background-color: $colorD;
+            border-color: $colorD;
+        }
+    }
+    &.btn-primary {
+        color: $colorF;
+        background-color: $colorC;
+        border-color: $colorC;
+        &.focus, &:focus, &:hover {
+            background-color: $colorC;
+            border-color: $colorC;
+        }
     }
 }
 
@@ -199,17 +227,6 @@ a, a:hover, a:focus {
     }
 }
 
-.btn-success {
-    background-color: $colorA !important;
-}
-
-
-.btn-primary {
-    color: $colorF;
-    background-color: $colorA;
-    border-color: #4E9213;
-}
-
 .validation-warning {
     color: $colorC;
     font-size: 12px;
@@ -323,18 +340,19 @@ input.ng-dirty.ng-invalid {
     }
     .box-footer {
         text-align: right;
-        background-color: $colorF;
-        padding: 14px;
-        border-top: 1px solid $border-color;
+        background-color: $colorB;
+        padding: 0;
 
         label {
             font-size: 14px;
-            color: $colorA;
-            font-weight: 500;
+            color: $colorF;
+            font-weight: 800;
         }
 
         button {
-            min-width: 100px;
+            min-width: 140px;
+            margin-left: 10px;
+            min-height: 60px;
         }
     }
 }
@@ -345,17 +363,18 @@ input.ng-dirty.ng-invalid {
     flex-flow: row wrap;
     justify-content: space-between;
     > div {
-        min-width: 100px;
+        min-width: 180px;
         text-align: center;
-        border: 1px solid #FAFAFA;
+        border: 1px solid transparent;
         cursor: pointer;
-
+        padding: 5px;
         &:hover {
             border: 1px solid #CCC;
         }
-
         img {
-            max-width: 150px;
+            width: 100px;
+            height: 100px;
+            border: 1px solid #CCC;
         }
     }
 }
