--- a/styles/_common.scss
+++ b/styles/_common.scss
@@ -306,6 +306,13 @@ input.ng-dirty.ng-invalid {
     background-color: #fee;
 }
 
+.location-map {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
 .bh-box {
     background: none repeat scroll 0 0 #FFFFFF;
     margin: 0 auto;
