--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -4,13 +4,6 @@
         <div class="footer-logo">
             <img src="{{ fields.footer_logo }}" data-custom-field="src:footer_logo">
         </div>
-        <div class="footer-address">
-            <b>Address</b>
-            <p>2475 NW 95th Ave</p>
-            <p>Unit 8</p>
-            <p>Doral, FL 33172</p>
-            <p>Phone: (305) 499-3304</p>
-        </div>
         <div class="footer-hours">
             <b>Hours</b>
             {% for hours in time.week_summary %}
@@ -30,6 +23,7 @@
             <ul>
                 <li><a href="/contactus">Feedback</a></li>
                 <li><a href="/location">Location</a></li>
+                <li><a href="/terms-and-conditions">Terms &amp; Conditions</a></li>
             </ul>
             <div class="footer-social">
                 <a href="http://www.facebook.com/deliriofreshco" target="_blank">
