--- a/styles/_location-select.scss
+++ b/styles/_location-select.scss
@@ -17,7 +17,7 @@
         cursor: pointer;
     }
 
-    @media (min-width: 468px) {
+    @media (min-width: $xs-width) {
         margin: 20px 0;
         flex-direction: row;
     }
