--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,7 +1,7 @@
 /* navbar-full.html */
 body.navbar-fixed {
     padding-top: 52px;
-    @media (min-width: 768px) {
+    @media (min-width: $sm-width) {
         padding-top: 84px;
     }
     &.home {
@@ -15,7 +15,7 @@ body.navbar-fixed {
         box-shadow: none;
     }
     &.scrolled .navbar.navbar-transparent {
-        @media (min-width: 768px) {
+        @media (min-width: $sm-width) {
             background-color: white;
             box-shadow: 1px 1px 1px 1px #eee;
         }
@@ -84,7 +84,7 @@ body.navbar-fixed {
         text-align: right;
     }
 
-    @media (min-width: 768px) {
+    @media (min-width: $sm-width) {
         display: none;
     }
 }
@@ -98,7 +98,7 @@ body.navbar-fixed {
     .navbar-desktop-logo,
     .navbar-desktop-cart {
         display: none;
-        @media (min-width: 768px) {
+        @media (min-width: $sm-width) {
             display: block;
         }
     }
@@ -118,21 +118,21 @@ body.navbar-fixed {
     @media (max-width: 767px) {
         @include sidenavigation(-100%);
     }
-    @media (min-width: 768px) {
+    @media (min-width: $sm-width) {
         padding: 0 0 5px;
         flex: 1;
     }
 
     .navigation-header {
         text-align: right;
-        @media (min-width: 768px) {
+        @media (min-width: $sm-width) {
             display: none;
         }
     }
 
     .navigation-customer {
         border-top: 1px solid $colorG;
-        @media (min-width: 768px) {
+        @media (min-width: $sm-width) {
             order: -1;
             border-top: none;
             display: flex;
@@ -159,14 +159,14 @@ body.navbar-fixed {
         .navbar-checkout-logo {
             img {
                 max-height:  40px;
-                @media (min-width: 768px) {
+                @media (min-width: $sm-width) {
                     max-height: 60px;
                 }
             }
         }
         .navbar-checkout-lock {
             max-height: 32px;
-            @media (min-width: 768px) {
+            @media (min-width: $sm-width) {
                 max-height: 48px;
             }
         }
