--- a/styles/_menu.scss
+++ b/styles/_menu.scss
@@ -6,11 +6,11 @@
         width: 100%;
         margin: 30px 0 10px;
         font-size: 20px;
-        @media (min-width: 768px) {
+        @media (min-width: $sm-width) {
             font-size: 36px;
         }
         text-align: center;
-        @media (min-width: 480px) {
+        @media (min-width: $xs-width) {
             text-align: left;
         }
         a {
@@ -28,14 +28,14 @@
         text-decoration: underline;
         margin: 4px 8px;
         font-size: 18px;
-        @media (min-width: 768px) {
+        @media (min-width: $sm-width) {
             font-size: 22px;
         }
     }
     .section-description {
         color: #777;
         font-size: 14px;
-        @media (min-width: 768px) {
+        @media (min-width: $sm-width) {
             font-size: 16px;
         }
     }
@@ -59,7 +59,7 @@
     border: 1px solid transparent;
     transition: all 0.3s;
     font-size: 14px;
-    @media (min-width: 768px) {
+    @media (min-width: $sm-width) {
         font-size: 18px;
         flex-basis: 50%;
     }
@@ -175,7 +175,7 @@
     .checkboxes, .radios {
         display: flex;
         flex-wrap: wrap;
-        @media (min-width: 768px) {
+        @media (min-width: $sm-width) {
             padding: 0 40px;
         }
         label {
