--- a/styles/checkout/_gratitude.scss
+++ b/styles/checkout/_gratitude.scss
@@ -13,7 +13,7 @@
             outline: none;
             overflow: hidden;
             padding: 0;
-            @media (min-width: 768px) {
+            @media (min-width: $sm-width) {
                 padding: 12px 0;
             }
             text-align: center;
@@ -40,7 +40,7 @@
             font-size: 16px;
             font-weight: 700;
             transition: .2s;
-            @media (min-width: 768px) {
+            @media (min-width: $sm-width) {
                 font-size: 20px;
             }
         }
@@ -48,7 +48,7 @@
             color: $colorG;
             font-size: 12px;
             font-weight: 700;
-            @media (min-width: 768px) {
+            @media (min-width: $sm-width) {
                 font-size: 14px;
             }
         }
