--- a/styles/checkout/_order-summary.scss
+++ b/styles/checkout/_order-summary.scss
@@ -3,10 +3,10 @@
     font-size: 12px;
     margin: 0 auto;
     width: 100%;
-    @media (min-width: 768px) {
+    @media (min-width: $sm-width) {
         font-size: 18px;
     }
-    @media (min-width: 1200px) {
+    @media (min-width: $xl-width) {
         margin-top: 29px;
         width: auto;
         min-width: 260px;
@@ -29,7 +29,7 @@
             padding: 0 15px;
             height: 100%;
             cursor: pointer;
-            @media (min-width: 768px) {
+            @media (min-width: $sm-width) {
                 content: "";
             }
         }
@@ -43,7 +43,7 @@
         overflow: hidden;
         height: 0;
         font-size: 14px;
-        @media (min-width: 768px) {
+        @media (min-width: $sm-width) {
             height: auto;
         }
         -webkit-transition: height 0.8s;
@@ -66,7 +66,7 @@
     display: flex;
     justify-content: space-between;
     padding: 6px;
-    @media (min-width: 768px) {
+    @media (min-width: $sm-width) {
         padding: 12px;
     }
 
@@ -97,7 +97,7 @@
         font-weight: 700;
         text-align: right;
         color: $colorA;
-        @media (min-width: 768px) {
+        @media (min-width: $sm-width) {
             flex-basis: 120px;
         }
     }
@@ -105,7 +105,7 @@
 
 .order-summary-lineitems {
     padding: 6px;
-    @media (min-width: 768px) {
+    @media (min-width: $sm-width) {
         padding: 12px;
     }
     .order-summary-subtotal,
@@ -122,7 +122,7 @@
             flex-basis: 60px;
             text-align: right;
             color: $colorA;
-            @media (min-width: 768px) {
+            @media (min-width: $sm-width) {
                 flex-basis: 120px;
             }
         }
