--- a/styles/checkout/_payment.scss
+++ b/styles/checkout/_payment.scss
@@ -1,4 +1,4 @@
-.checkout-form-payment {
+.checkout-form-payment, .mealplan-payment {
     .customer-card {
         margin: 0 0 10px;
         label span {
