--- a/styles/main.scss
+++ b/styles/main.scss
@@ -28,6 +28,7 @@ $xl-width: 1200px;
 @import "home";
 @import "location-select";
 @import "menu";
+@import "meal-plan";
 @import "common";
 @import "checkout/checkout";
 @import "blocks/instagram";
